<resources>
    <string name="app_name">Cheese Finder App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_button">Home</string>
    <string name="map_button">Map</string>
    <string name="about_button">About</string>
    <string name="lait">lait</string>
    <string name="authors_name">auteur</string>
    <string name="URL">URL</string>
    <string name="explanation">explanation</string>
    <string name="Librairies">librairies</string>
    <string name="licenses">licenses</string>
    <string name="cheese_name">fromage</string>
    <string name="department">departement</string>
</resources>